# cli-code-ai

./: .env  .env.example  .gitignore  README.md  SETUP.md  auth.db  auth_server.py  cli_client.py  delete_test_user.py  feature_implement.md  pyproject.toml  requirements.txt  setup.py  test_auth.py
backend/: klix_code.db  requirements.txt  test_auth_direct.py
backend/src/: main.py
backend/src/agent/: orchestrator.py  tool_executor.py
backend/src/auth/: models.py  routes.py  service.py
backend/src/core/: config.py  database.py  dependencies.py
backend/src/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
backend/src/tools/: __init__.py  base.py  code_analyser.py  code_editor.py  git_operations.py  shell_executor.py
basault/: __init__.py  auth.py  config.py  main.py
basault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
basault/analyser/: analyser.py
frontend/: package-lock.json  package.json  test_cli_auth.js  tsconfig.json
frontend/src/cli/: auth.ts  main.ts
frontend/src/types/: auth.ts  tools.ts
public/: index.html
