[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basault"
version = "1.0.0"
description = "Simple CLI Authentication Tool"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "PyJWT>=2.4.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/basault"
"Bug Reports" = "https://github.com/yourusername/basault/issues"

[project.scripts]
basault = "basault.main:cli"